--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.3",
@@ -25,8 +26,10 @@
     "next": "14.2.11",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "recharts": "^2.13.0",
     "sass": "^1.79.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
