--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "cy:open": "cypress open",
+        "cy:run": "cypress run",
+        "test:e2e": "start-server-and-test dev http://localhost:3000 cy:open",
+        "test:e2e:headless": "start-server-and-test dev http://localhost:3000 cy:run"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.1.2",
@@ -42,6 +46,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "cypress": "^14.3.0",
         "eslint": "^8",
         "eslint-config-next": "14.2.11",
         "postcss": "^8",
