--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unused-vars": "off",
         "react/no-unescaped-entities": "off",
-        "react-hooks/exhaustive-deps": "warn",
-        "@next/next/no-img-element": "warn"
+        "react-hooks/exhaustive-deps": "off",
+        "@next/next/no-img-element": "off"
     }
 }
