--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "eslint": "^8",
         "eslint-config-next": "14.2.11",
         "postcss": "^8",
+        "start-server-and-test": "^2.0.11",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
     }
