--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,31 @@
-name: CI
+# name: CI
 
-on:
-    push:
-        branches: [main]
-    pull_request:
-        branches: [main]
-    workflow_dispatch:
+# on:
+#     push:
+#         branches: [main]
+#     pull_request:
+#         branches: [main]
+#     workflow_dispatch:
 
-jobs:
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
+# jobs:
+#     test:
+#         runs-on: ubuntu-latest
+#         steps:
+#             - uses: actions/checkout@v3
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: "18"
+#             - name: Setup Node.js
+#               uses: actions/setup-node@v3
+#               with:
+#                   node-version: "18"
 
-            - name: Install dependencies
-              run: npm ci
+#             - name: Install dependencies
+#               run: npm ci
 
-            - name: Run ESLint
-              run: npm run lint
+#             - name: Run ESLint
+#               run: npm run lint
 
-            - name: Build project
-              run: npm run build
+#             - name: Build project
+#               run: npm run build
 
-            - name: Run Cypress tests
-              run: npm run test:e2e:headless
+#             - name: Run Cypress tests
+#               run: npm run test:e2e:headless
