--- a/.github/workflows/cloud-run-deploy.yml
+++ b/.github/workflows/cloud-run-deploy.yml
@@ -3,6 +3,9 @@ name: Deploy to Cloud Run
 on:
     push:
         branches: [main]
+    pull_request:
+        branches: [main]
+    workflow_dispatch:
 
 env:
     PROJECT_ID: nutrifit-459709
@@ -10,13 +13,32 @@ env:
     REGION: europe-west1
 
 jobs:
-    verify_tests:
-        uses: ./.github/workflows/ci.yml
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: "18"
+
+            - name: Install dependencies
+              run: npm ci
+
+            - name: Run ESLint
+              run: npm run lint
+
+            - name: Build project
+              run: npm run build
+
+            - name: Run Cypress tests
+              run: npm run test:e2e:headless
 
     deploy:
-        needs: [verify_tests]
+        needs: [test]
         runs-on: ubuntu-latest
-
+        if: github.ref == 'refs/heads/main'
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
